--- a/embedded-resources/Cargo.toml
+++ b/embedded-resources/Cargo.toml
@@ -2,6 +2,10 @@
 name = "embedded-resources"
 version = "0.1.0"
 edition = "2021"
+authors = ["Adin Ackerman <adinackerman@gmail.com>"]
+description = "Define peripheral usage in a single place for use everywhere."
+license-file = "../LICENSE"
+repository = "https://github.com/adinac/embedded-resources"
 
 [dependencies]
 Inflector = "0.11.4"
