--- a/embedded-resources/Cargo.toml
+++ b/embedded-resources/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "embedded-resources"
-version = "0.1.5"
+version = "0.2.0"
 edition = "2021"
 authors = ["Adin Ackerman <adinackerman@gmail.com>"]
 description = "Define peripheral usage in a single place for use everywhere."
@@ -16,3 +16,10 @@ syn = { version = "2.0.48", features = ["full"] }
 
 [lib]
 proc-macro = true
+
+[features]
+stm32 = []
+nrf = []
+# TODO: more
+
+_test = []
